unpackaged/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__AlternateLookupResolutionField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__AlternateLookupResolutionField__c</fullName>
    <label>Alternate Lookup Resolution Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>