unpackaged/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__SourceResolutionControlField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceResolutionControlField__c</fullName>
    <label>Source Resolution Control Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>