unpackaged/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__SourceValueIsId__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceValueIsId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Value Is ID</label>
    <type>Checkbox</type>
</CustomField>