unpackaged/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__TargetField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetField__c</fullName>
    <label>Target Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>