unpackaged/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__TargetLookupResolutionField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetLookupResolutionField__c</fullName>
    <label>Target Lookup Resolution Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>