unpackaged/main/default/objects/ffirule__IntegrationRuleMapping__c/fields/ffirule__TargetRecordBasedOn__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetRecordBasedOn__c</fullName>
    <label>Target Record Created From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Source Record</fullName>
                <default>true</default>
                <label>Source Record</label>
            </value>
            <value>
                <fullName>Source Record Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>